bug: Fixed sticky fade overlap of FullWidthPromo background

--- a/src/assets/styles/20-tools/_mixins/_sticky.scss
+++ b/src/assets/styles/20-tools/_mixins/_sticky.scss
@@ -38,7 +38,7 @@
       position: absolute;
       right: 0;
       top: -80px;
-      z-index: var(--z-low);
+      z-index: 0;
     }
   }
 
